added some text

--- a/content/appendix-B-zkratky.tex
+++ b/content/appendix-B-zkratky.tex
@@ -1,7 +1,10 @@
+\usepackage[T1]{fontenc}
+\usepackage[utf8]{inputenc}
+
 %!TEX ROOT=../diploma-thesis.tex
 
 \chapter{Seznam pou\v zit\'ych zkratek}
 
 \begin{description}[align=left]
-    \item [TODO] TODO
+    \item [OOP] Objektově orientované programování
 \end{description}
