--- a/content/chapter-03-reserse.tex
+++ b/content/chapter-03-reserse.tex
@@ -1,6 +1,9 @@
+\usepackage[T1]{fontenc}
+\usepackage[utf8]{inputenc}
+
 %!TEX ROOT=../diploma-thesis.tex
 
-\chapter{Re\v ser\v se}\label{ch:reserse}
+\chapter{Rešerše}\label{ch:reserse}
 
 \section{Architektura orientovaná na služby}
 
@@ -8,11 +11,84 @@
 
 \section{Aspektově orientované programování}
 
+% Co je paradigma
+Programování je komplexní disciplína s teoreticky
+neomezeným počtem možností, jakým programátor může
+řešit zadaný problém. Ačkoliv každá úloha má své specifické
+požadavky, za relativně krátkou historii programování se
+stihlo ustálit několik ideologií, tzv. programovacích
+paradigmat, které programátorovi poskytují sadu abstrakcí
+a základních principů~\cite{van2009programming}.
+Díky znalosti paradigmatu může programátor nejen zlepšit
+svou produktivitu, ale zároveň může snáze pochopit myšlenky
+jiného programátora a tím zlepšit kvalitu týmové spolupráce.
+
+% OOP a jeho popis
+Jedním z nejpopulárnějších paradigmat používaných k
+vývoji moderních enterprise systémů je nepochybně
+objektově orientované programování (OOP). To vnímá daný problém
+jako množinu objektu, které spolu intereagují. Program
+člení na malé funkční celky odpovídající struktuře
+reálného světa~\cite{rentsch1982object}. Je vhodné zmínit,
+že objekty se rozumí jak konkrétní koncepty, například
+auto nebo člověk, tak i abstraktní koncepty,
+namátkou bankovní transakce nebo objednávka v obchodě.
+Objekty se pak promítají do kódu programu i do
+reprezentace struktur v paměti počítače.
+Tento přístup je velmi snadný pro pochopení,
+vede k lepšímu návrhu a organizaci programu a snižuje
+tak náklady na jeho vývoj a údržbu.
+
+% Nedostatky OOP
+Ačkoliv je OOP velmi silným a všestraným nástrojem,
+existují problémy, které nelze jeho pomocí efektivně řešit.
+Jedním takovým problémem jsou obecné požadavky na systém,
+které musejí být konzistentně dodržovány na více místech,
+které spolu zdánlivě nesouvisí. Příkladem
+může být logování systémových akcí, optimalizace správy paměti
+nebo uniformní zpracování výjimek~\cite{kiczales1997aspect}.
+Takové požadavky nazýváme \textit{cross-cutting concerns}.
+V rámci OOP je programátor nucen v ojektech manuálně opakovat
+kód, který zodpovídá za jejich realizaci. Duplikace kódu
+vede k větší náchylnosti na lidskou chybu a k vyšším nárokům na vývoj
+a údržbu daného softwarového systému~\cite{fowler2009refactoring}.
+
+% AOP jako odpověď na nedostatky OOP
+Aspektově orientované programování (AOP) přináší řešení na
+výše zmiňované problémy. Extrahuje obecné požadavky,
+tzv. \textit{aspekty} do jednoho místa a pomocí procesu zvaného
+\textit{weaving} je poté automaticky distribuuje do systému.
+Weaving může proběhnout staticky při kompilaci programu nebo dynamicky
+při jeho běhu.  V obou případech ale programátorovi ulehčuje práci,
+protože k definici i změně aspektu dochází centrálně a tím je eliminována
+potřeba manuální duplikace kódu. Je nutno poznamenat, že AOP není
+paradigmatem poskytujícím kompletní framework pro návrh programu.
+V ideálním případě je tedy k návrhu systému využita kombinace
+AOP s jiným paradigmatem. Pro účely této práce se zaměříme na
+kombinaci AOP a OOP.
+
+% TODO: diagram cross cutting concerns
+% TODO: rozáhnout do více odstavců
+% TODO: diagram weaveru
+
+\begin{description}
+    \item [Aspekt]
+    \item [Join-point]
+    \item [Pointcut]
+    \item [Advice]
+    \item [Weaving]
+\end{description}
+
 % TODO: \section{BPEL}
 
 \section{Aspect-driven Design Approach}
 
 Aspect-driven Design Approach (ADDA)
+
+% Vhodnost AOP pro náš úkol
+Vzhledem k požadavkům na implementaci našeho frameworku stanoveným
+v předchozí kapitole~\ref{ch:analyza} se AOP a na něm stavějící ADDA
+jeví jako vhodný přístup, který nám pomůže dosáhnout cíle.
 
 \section{Stávající řešení reprezentace byznys pravidel}
 
