--- a/content/chapter-06-verifikace.tex
+++ b/content/chapter-06-verifikace.tex
@@ -1,14 +1,27 @@
+\usepackage[T1]{fontenc}
+\usepackage[utf8]{inputenc}
+
 %!TEX ROOT=../diploma-thesis.tex
 
 \chapter{Verifikace a validace}\label{ch:verifikace}
 
-\section{Testování naprogramované knihovny}
+\section{Testování naprogramovaných knihoven}
 
 \subsection{Platforma Java}
 
 \subsection{Platforma Python}
 
 \subsection{Platforma Node.js}
+
+\subsection{Continuous Integration}
+
+Po celou dobu vývoje jednotlivých knihoven byl využíván nástroj
+Travis CI\footnote{
+https://travis-ci.org/
+}, který po každém přidáním kódu do repozitáře spouštěl automatizované
+testy a informoval vývojáře o jejich výsledcích. To umožnilo okamžitě
+identifikovat změny, které do kódu vnesly chybu.
+% TODO: co jsem tim vlastně chtěl říct?
 
 \section{Případová studie: e-commerce systém}
 
