--- a/reference.bib
+++ b/reference.bib
@@ -1,19 +1,70 @@
 @article{cemusaspect,
-  title={Aspect-driven Context-aware Services},
-  author={Cemus, Karel and Klimes, Filip and Cerny, Tomas}
+    title = {Aspect-driven Context-aware Services},
+    author = {Cemus, Karel and Klimes, Filip and Cerny, Tomas}
 }
 
 @article{cemus2017separation,
-  title={Separation of concerns for distributed cross-platform context-aware user interfaces},
-  author={Cemus, Karel and Klimes, Filip and Kratochvil, Ondrej and Cerny, Tomas},
-  journal={Cluster Computing},
-  pages={1--8},
-  year={2017},
-  publisher={Springer}
+    title = {Separation of concerns for distributed cross-platform context-aware user interfaces},
+    author = {Cemus, Karel and Klimes, Filip and Kratochvil, Ondrej and Cerny, Tomas},
+    journal = {Cluster Computing},
+    pages = {1--8},
+    year = {2017},
+    publisher = {Springer}
 }
 
 @article{cerny2017disambiguation,
-  title={Disambiguation and Comparison of SOA, Microservices and Self-Contained Systems},
-  author={Cerny, Tomas and Donahoo, Michael J and Pechanec, Jiri},
-  year={2017}
+    title = {Disambiguation and Comparison of SOA, Microservices and Self-Contained Systems},
+    author = {Cerny, Tomas and Donahoo, Michael J and Pechanec, Jiri},
+    year = {2017}
+}
+
+@article{rentsch1982object,
+    title = {Object oriented programming},
+    author = {Rentsch, Tim},
+    journal = {ACM Sigplan Notices},
+    volume = {17},
+    number = {9},
+    pages = {51--57},
+    year = {1982},
+    publisher = {ACM}
+}
+
+@article{van2009programming,
+    title = {Programming paradigms for dummies: What every programmer should know},
+    author = {Van Roy, Peter and others},
+    journal = {New computational paradigms for computer music},
+    volume = {104},
+    year = {2009},
+    publisher = {IRCAM/Delatour France}
+}
+
+@article{klimes2016automaticke,
+    title = {Automatické generování formulářů v informačních systémech},
+    author = {Filip Klimeš},
+    year = {2016},
+    publisher = {{ \v { C } } esk { \'e } vysok { \'e } u { \v { c } } en { \'\i } technick { \'e } v Praze. Vypo { \v { c } } etn { \'\i } a informa { \v { c } } n { \'\i } centrum.}
+}
+
+@inproceedings{kiczales1997aspect,
+    title = {Aspect-oriented programming},
+    author = {Kiczales, Gregor and Lamping, John and Mendhekar, Anurag and Maeda, Chris and Lopes, Cristina and Loingtier, Jean-Marc and Irwin, John},
+    booktitle = {European conference on object-oriented programming},
+    pages = {220--242},
+    year = {1997},
+    organization = {Springer}
+}
+
+@book{fowler2009refactoring,
+    title = {Refactoring: improving the design of existing code},
+    author = {Fowler, Martin},
+    year = {2009},
+    publisher = {Pearson Education India}
+}
+
+@article{varda2008protocol,
+    title = {Protocol buffers: Google’s data interchange format},
+    author = {Varda, Kenton},
+    journal = {Google Open Source Blog, Available at least as early as Jul},
+    volume = {72},
+    year = {2008}
 }
