some progress has been made

--- a/content/chapter-04-navrh.tex
+++ b/content/chapter-04-navrh.tex
@@ -1,6 +1,9 @@
+\usepackage[T1]{fontenc}
+\usepackage[utf8]{inputenc}
+
 %!TEX ROOT=../diploma-thesis.tex
 
-\chapter{N\'avrh}\label{ch:navrh}
+\chapter{Návrh}\label{ch:navrh}
 
 \section{Formalizace architektury orientované na služby}
 
