--- a/diploma-thesis.tex
+++ b/diploma-thesis.tex
@@ -45,6 +45,9 @@ unicode=true,
 \usepackage{blindtext}
 \usepackage{multirow}
 
+% custom macros
+\usepackage{custom}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % příkazy šablony
 \makenomenclature                                % při překladu zajistí vytvoření pracovního souboru se seznamem zkratek
