--- a/reference.bib
+++ b/reference.bib
@@ -54,11 +54,12 @@
     organization = {Springer}
 }
 
-@book{fowler2009refactoring,
-    title = {Refactoring: improving the design of existing code},
-    author = {Fowler, Martin},
-    year = {2009},
-    publisher = {Pearson Education India}
+@book{fowler1999refactoring,
+    title={Refactoring: improving the design of existing code},
+    author={Fowler, Martin and Beck, Kent},
+    year={1999},
+    publisher={Addison-Wesley Professional},
+    address = {Boston, Massachusetts, USA},
 }
 
 @article{varda2008protocol,
@@ -67,4 +68,13 @@
     journal = {Google Open Source Blog, Available at least as early as Jul},
     volume = {72},
     year = {2008}
+}
+
+@article{fowler2006continuous,
+    title = {Continuous integration},
+    author = {Fowler, Martin and Foemmel, Matthew},
+    journal = {Thought-Works http://www.thoughtworks.com/ContinuousIntegration.pdf},
+    volume = {122},
+    pages = {14},
+    year = {2006}
 }
