some unnecessary paragraphs about XML

--- a/content/appendix-B-zkratky.tex
+++ b/content/appendix-B-zkratky.tex
@@ -3,8 +3,12 @@
 
 %!TEX ROOT=../diploma-thesis.tex
 
-\chapter{Seznam pou\v zit\'ych zkratek}
+\chapter{Seznam použitých zkratek}
 
 \begin{description}[align=left]
+    \item [AST] Abstract syntax tree
+    \item [DSL] Domain-Specific Language
     \item [OOP] Objektově orientované programování
+    \item [XML] Extensible Markup Language
+    \item [XSD] XML Schema Definition
 \end{description}
