--- a/content/chapter-06-verifikace.tex
+++ b/content/chapter-06-verifikace.tex
@@ -16,7 +16,7 @@ otestovány pomocí sady jednotkových a integračních testů.
 V rámci konceptu \textit{continous integration}~\cite{fowler2006continuous}
 byl kód po celou dobu vývoje zasílán do centrálního repozitáře
 a s pomocí nástroje Travis CI\footnote{https://travis-ci.org/}
-byl automaticky spouštěno jeho sestavení a otestování. Systém
+bylo automaticky spouštěno jeho sestavení a otestování. Systém
 zároveň okamžitě informoval vývojáře o jejich výsledcích. To
 umožnilo v krátkém časovém horizontu identifikovat konkrétní změny
 v kódu, které do programu vnesly chybu. Tím byla snížena
