--- a/custom.sty
+++ b/custom.sty
@@ -37,3 +37,6 @@
 \newcommand\circledAlph{\protect\circled{\Alph*}}
 % pismenny seznam (a)
 \newcommand\circledalph{\protect\circled{\alph*}}
+
+% Code
+\newcommand{\code}[1]{\texttt{#1}}
