--- a/reference.bib
+++ b/reference.bib
@@ -55,10 +55,10 @@
 }
 
 @book{fowler1999refactoring,
-    title={Refactoring: improving the design of existing code},
-    author={Fowler, Martin and Beck, Kent},
-    year={1999},
-    publisher={Addison-Wesley Professional},
+    title = {Refactoring: improving the design of existing code},
+    author = {Fowler, Martin and Beck, Kent},
+    year = {1999},
+    publisher = {Addison-Wesley Professional},
     address = {Boston, Massachusetts, USA},
 }
 
@@ -77,4 +77,24 @@
     volume = {122},
     pages = {14},
     year = {2006}
+}
+
+@article{bray1997extensible,
+    title = {Extensible markup language (XML).},
+    author = {Bray, Tim and Paoli, Jean and Sperberg-McQueen, C Michael and Maler, Eve and Yergeau, Fran { \c { c } } ois},
+    journal = {World Wide Web Journal},
+    volume = {2},
+    number = {4},
+    pages = {27--66},
+    year = {1997}
+}
+
+@article{lee2000comparative,
+    title = {Comparative analysis of six XML schema languages},
+    author = {Lee, Dongwon and Chu, Wesley W},
+    journal = {Sigmod Record},
+    volume = {29},
+    number = {3},
+    pages = {76--87},
+    year = {2000}
 }
