some more implementation chapter progress

--- a/content/appendix-B-zkratky.tex
+++ b/content/appendix-B-zkratky.tex
@@ -9,6 +9,7 @@
     \item [AST] Abstract syntax tree
     \item [DSL] Domain-Specific Language
     \item [OOP] Objektově orientované programování
+    \item [RPC] Remote Procedure Call
     \item [XML] Extensible Markup Language
     \item [XSD] XML Schema Definition
 \end{description}
