--- a/reference.bib
+++ b/reference.bib
@@ -98,3 +98,25 @@
     pages = {76--87},
     year = {2000}
 }
+
+@phdthesis{nelson1981remote,
+    author = {Nelson, Bruce Jay},
+    title = {Remote Procedure Call},
+    year = {1981},
+    note = {AAI8204168},
+    school = {Carnegie Mellon University},
+    publisher = {Carnegie Mellon University},
+    address = {Pittsburgh, PA, USA},
+}
+
+@inproceedings{tarjan1971depth,
+    author = {R. Tarjan},
+    booktitle = {12th Annual Symposium on Switching and Automata Theory (swat 1971)},
+    title = {Depth-first search and linear graph algorithms},
+    year = {1971},
+    pages = {114-121},
+    keywords = {Chemistry;Computer science;Electrical engineering;Erbium;Information retrieval;Sociology;TV;Tail;Tree graphs},
+    doi = {10.1109/SWAT.1971.10},
+    ISSN = {0272-4847},
+    month = {Oct}
+}
